--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build with Maven
-        run: mvn clean package
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -31,11 +22,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Build with Maven
+        run: mvn clean package
+        working-directory: ./Books  
+
       - name: Build Docker image
         id: build
         uses: docker/build-push-action@v3
         with:
-          context: ./Books 
+          context: ./Books y
           push: false
           tags: lynxeen/library_docker_k8s:latest
 
